<resources>
    <string name="app_name">BloodDonor</string>

    <!-- Common -->
    <string name="app_version">version 1.0</string>
    <string name="today">Bugün</string>
    <string name="yesterday">Dün</string>
    <!-- ***************************************************************** -->

    <!-- Header -->
    <string name="good_morning">Günaydın</string>
    <string name="good_evening">İyi Akşamlar</string>
    <string name="good_night">İyi Geceler</string>
    <string name="good_day">İyi Günler</string>
    <!-- ***************************************************************** -->

    <!-- Bottom Navigation -->
    <string name="home">Anasayfa</string>
    <string name="my_posts">İlanlarım</string>
    <!-- ***************************************************************** -->

    <!-- Login/Register -->
    <string name="sign_in">Giriş</string>
    <string name="email">Email</string>
    <string name="password">Şifre</string>
    <string name="logout">Çıkış Yap</string>
    <string name="should_not_empty">Bu alan boş geçilemez.</string>
    <string name="should_not_be_empty">Bu alan boş geçilemez.</string>
    <string name="dont_you_have_an_account">Hesabın yok mu?</string>
    <string name="sign_in_title">Giriş Yap</string>
    <string name="sign_up">Kayıt Ol</string>
    <string name="blood_group">Kan Grubu</string>
    <string name="do_you_have_an_account">Hesabın var mı?</string>
    <string name="date_of_birth">Doğum Tarihi</string>
    <string name="date_of_last_donation">Son Kan Bağışı Tarihi</string>
    <string name="surname">Soyad</string>
    <string name="name">Ad</string>
    <string name="city">İl</string>
    <string name="district">İlçe</string>
    <string name="email_or_password_invalid">E-Mail veya Şifre hatalı…</string>
    <!-- ***************************************************************** -->

    <!-- Create New Post -->
    <string name="create_new_post">Yeni İlan Oluştur</string>
    <string name="post_is_succesfully_created">İlan başarıyla oluşturuldu.</string>
    <string name="age">Yaş</string>
    <string name="message">Mesaj</string>
    <!-- ***************************************************************** -->

    <!-- Profile Rows -->
    <string name="profile">Profil</string>
    <string name="change_password">Şifreni Değiştir</string>
    <string name="change_phone_number">Telefon Numaranı Değiştir</string>
    <string name="change_location">Konumunu Değiştir</string>
    <string name="exit">Çıkış Yap</string>
    <!-- ***************************************************************** -->

    <!-- Change Password -->
    <string name="current_password">Mevcut Şifre</string>
    <string name="new_password">Yeni Şifre</string>
    <string name="update_password">Şifreyi Güncelle</string>
    <string name="new_password_confirm">Yeni Şifre (Tekrar)</string>
    <string name="password_change_successful">Şifreniz başarıyla değiştirildi.</string>
    <!-- ***************************************************************** -->

    <!-- Change Phone Number -->
    <string name="update_phone_number">Telefon Numarasını Güncelle</string>
    <string name="phone_number">Telefon Numarası</string>
    <string name="phone_number_is_succesfully_changed">Telefon numarası başarıyla değiştirildi.</string>
    <string name="location_succesfully_changed">Konumunuz başarıyla değiştirildi.</string>
    <string name="phone_cannot_be_same">Girilen telefon numarası mevcut ile aynı olamaz.</string>
    <string name="phone_cannot_be_start_with_zero">Telefon numarası 0 ile başlayamaz.</string>
    <string name="phone_numbers_length_must_be_ten">Telefon numarası 10 rakamdan oluşmalıdır.</string>
    <!-- ***************************************************************** -->

    <!-- Change Location -->
    <string name="location_can_not_be_same">Mevcut konumunuzdan farklı bir tercih yapmalısınız.</string>
    <!-- ***************************************************************** -->

    <!-- Item Blood Ad -->
    <string name="x_days_ago">%1$d gün önce</string>
    <!-- ***************************************************************** -->

    <!-- Post Detail -->
    <string name="post_detail_title">İlan Detayları</string>
    <string name="post_description">İlan Açıklaması</string>
    <string name="post_owner">İlan Sahibi: %s</string>
    <string name="comment_sent">Yorumunuz gönderildi.</string>
    <string name="age_two_dot">Yaş:&#160;</string>
    <string name="blood_group_two_dot">Kan Grubu:&#160;</string>
    <string name="call_the_author">İlan Sahibini Ara</string>
    <string name="write_on_whatsapp">WhatsApp\'tan Yaz</string>
    <string name="your_comment">Yorumunuz…</string>
    <string name="comments">Yorumlar</string>
    <!-- ***************************************************************** -->

    <!-- Notifications -->
    <string name="notifications">Bildirimler</string>
    <string name="no_ad_yet">Henüz ilan yok.</string>
    <string name="no_notification_yet">Henüz bildirim yok.</string>
    <string name="clear_notifications">Bildirimleri Temizle</string>
    <!-- ***************************************************************** -->

    <!-- Post List -->
    <string name="your_city">Şehriniz:&#160;</string>
    <string name="your_district">İlçeniz:&#160;</string>
    <string name="only_my_blood_group">Kan Grubuma Uygun</string>
    <!-- ***************************************************************** -->

    <string-array name="blood_groups">
        <item>Kan Grubu seçiniz…</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>0+</item>
        <item>0-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>

    <string name="share_text">%s yaşında olan %s isimli hastamız için %s kan grubu kana ihtiyacımız var. Yardımcı olabilir misiniz? \n\nDetaylar için BloodDonor uygulamasını indirebilirsin: https://play.google.com/store/apps/details?id=com.erdi.blooddonor</string>
    <string name="ad_has_been_removed">Görüntülemeye çalıştığınız ilan kaldırılmış.</string>

</resources>