<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="15dp"
    android:paddingVertical="8dp"
    tools:context=".feature.changephonenumber.ChangePhoneNumberFragment">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/country_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:ccpDialog_keyboardAutoPopup="false"
        app:ccp_clickable="true"
        app:ccp_showArrow="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtLay_phone_number"
        app:layout_constraintBottom_toBottomOf="@id/txtLay_phone_number"
        app:ccp_defaultNameCode="TR"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLay_phone_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/country_picker"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtInput_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/campton"
            android:inputType="phone"
            android:maxLength="10" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="3dp"
        android:text="@string/should_not_be_empty"
        android:textColor="@color/main_color"
        app:layout_constraintTop_toBottomOf="@id/txtLay_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_change_phone_number"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/campton"
        android:text="@string/update_phone_number"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/error" />


</androidx.constraintlayout.widget.ConstraintLayout>